separate project for the cli-app bundle to resolve dependencies properly